# fideltech

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
fideltech/: hooks.py  modules.txt
fideltech/api/: wordconverter.py
fideltech/cron/: employee_status.py  timesheetmail.py
fideltech/fideltech/custom/: customer.json  employee.json  packed_item.json  project.json  sales_invoice.json  sales_invoice_item.json  timesheet.json  timesheet_detail.json
fideltech/fideltech/doctype/invoice/: invoice.js  invoice.json  invoice.py  test_invoice.py
fideltech/fideltech/doctype/test1/: test1.js  test1.json  test1.py  test_test1.py
fideltech/fideltech/doctype/timesheet/: timesheet.py
fideltech/fideltech/print_format/fc_invoice/: fc_invoice.json
fideltech/fideltech/print_format/fc_invoice_for_wipro/: fc_invoice_for_wipro.json
fideltech/fideltech/print_format/ft/: ft.json
fideltech/fideltech/print_format/ft_invoice/: ft_invoice.json
fideltech/fideltech/print_format/ft_invoice_for_wipro/: ft_invoice_for_wipro.json
fideltech/fideltech/print_format/print_format_hours/: print_format_hours.json
fideltech/fideltech/print_format/sales_invoice_print_format/: sales_invoice_print_format.json
fideltech/fideltech/report/active_employee_deatils/: active_employee_deatils.js  (+2 more)
fideltech/fixtures/: print_format.json  property_setter.json  translation.json  workflow.json  workflow_action_master.json  workflow_state.json
fideltech/overrides/: timesheet_override.py
fideltech/public/js/: salesinvoice.js  test.js  timesheet_custom.js
(+12 files in other folders)
