[project]
name = "fideltech"
authors = [
    { name = "Hybrowlabs", email = "pritam@hybrowlabs.in"}
]
description = "Fideltech"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pandas~=1.3.5",
    "openpyxl~=3.0.9"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
